tests/neg-macros/quote-splice-interpret-1.scala

import scala.quoted._

object Macros {
  inline def isZero(inline n: Int): Boolean = ${
    if (n == 0) 'true // error
    else 'false
  }
}
